--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/jfdesrochers/jfdcomponents#readme",
   "dependencies": {
-    "js-yaml": "^3.8.3"
+    "js-yaml": "^3.8.3",
+    "mithril": "^1.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
+  }
 }
